force-app/main/default/objects/Order__c/fields/Customer_address__c.field-meta.xml
<CustomField>
    <fullName>Customer_address__c</fullName>
    <formula>Customer__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer address</label>
    <type>Text</type>
</CustomField>