force-app/main/default/objects/Order__c/fields/Customer_email__c.field-meta.xml
<CustomField>
    <fullName>Customer_email__c</fullName>
    <formula>Customer__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer email</label>
    <type>Text</type>
</CustomField>