force-app/main/default/objects/Order__c/fields/Customer_full_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_full_name__c</fullName>
    <description>Customers Name</description>
    <formula>Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer full name</label>
    <type>Text</type>
</CustomField>