force-app/main/default/objects/Order__c/fields/List_of_products__c.field-meta.xml
<CustomField>
    <fullName>List_of_products__c</fullName>
    <description>This is list of products that customer wants to buy</description>
    <label>List of products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>