force-app/main/default/objects/Order__c/fields/Order_date__c.field-meta.xml
<CustomField>
    <fullName>Order_date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Order date</label>
    <type>Date</type>
</CustomField>