force-app/main/default/objects/Order__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <displayFormat>O-{00000}</displayFormat>
    <label>Order ID</label>
    <type>AutoNumber</type>
</CustomField>